fixing spacing issues

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,3 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
-* {
-  outline: 1px solid red;
-}
